cmake_minimum_required(VERSION 3.10)
project(formatter_ex)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
file(GLOB SOURCES "*.cpp")
if(NOT SOURCES)
message(FATAL_ERROR "No such files found in ${CMAKE_CURRENT_SOURCE_DIR}")
endif()
message(STATUS "Found sources: ${SOURCES}")
add_library(formatter_ex STATIC ${SOURCES})
target_include_directories(formatter_ex PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(formatter_ex formatter)
